YAML/7.Egress.yaml
#Blocking Outbound Access For MySQL
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: blocl-egress-from-mysql-to-internet
  namespace: mysqldb
spec:
  podSelector: 
    matchLabels:
      app: mysql
  policyTypes:
    - Egress
  egress: []

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-to-on-https-for-mysql
  namespace: mysqldb
spec:
  podSelector: 
    matchLabels:
      app: mysql
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
       cidr: 0.0.0.0/0
       except:
        - 10.0.0.0/8
        - 192.168.0.0/16
        - 172.16.0.0/20
  - ports:
      - protocol: TCP
        port: 80
      - protocol: TCP
        port: 443

ku run defaultutils --image=sreeharshav/utils --expose --port=8888

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-to-on-http-for-mysql
  namespace: mysqldb
spec:
  podSelector: 
    matchLabels:
      app: mysql
  policyTypes:
  - Egress
  egress:
  - to:
     - namespaceSelector: 
          matchLabels:
            nsp: default
       podSelector:
          matchLabels:
            ns: default
  - ports:
      - protocol: TCP
        port: 8888
        
---SAMPLE-PORT-BASED-ENGRESS-POLICY--
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
